--- a/public/404.html
+++ b/public/404.html
@@ -128,7 +128,7 @@
         </p>
       </div>
       <div>
-        <a class="cta" href="/">
+        <a class="cta" href="./">
           Back to dashboard
           <span aria-hidden="true">→</span>
         </a>
