--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Indapentx</title>
+    <title>Trend ISG</title>
     <link rel="icon" type="image/png" sizes="512x512" href="indapentx.png" />
     <link
       rel="preconnect"
@@ -1027,7 +1027,7 @@
         <div class="header-top">
           <div>
             <h1 id="app-title">Break Status</h1>
-            <p id="app-tagline">Made by Indapentx.</p>
+            <p id="app-tagline">Made by Furkan Öztürk for Trend ISG.</p>
           </div>
         </div>
       </header>
@@ -1243,7 +1243,7 @@
 
     <footer class="site-footer">
       <div class="footer-meta">
-        <p class="footer-title">Indapentx</p>
+        <p class="footer-title">Trend ISG</p>
         <p class="footer-note" id="footer-note">Choose your preferred language for the app.</p>
       </div>
       <div class="footer-actions">
@@ -1303,7 +1303,7 @@
           loading: "Loading…",
           header: {
             title: "Break Status",
-            tagline: "Made by Indapentx.",
+            tagline: "Made by Furkan Öztürk for Trend ISG.",
           },
           auth: {
             tabSignIn: "Sign In",
@@ -1464,7 +1464,7 @@
           loading: "Yükleniyor…",
           header: {
             title: "Mola Durumu",
-            tagline: "Indapentx tarafından yapıldı.",
+            tagline: "Trend ISG için Furkan Öztürk tarafından yapıldı.",
           },
           auth: {
             tabSignIn: "Giriş yap",
@@ -1672,7 +1672,7 @@
               },
             },
           ],
-        },
+        },/*
         {
           id: "domestic-departures",
           name: { en: "Domestic Departures", tr: "İç Hatlar" },
@@ -1744,7 +1744,7 @@
               },
             },
           ],
-        },
+        },*/
       ]);
 
       const SHOW_DEPARTMENT_DESCRIPTIONS = false;
